; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_symbols.c_UnloadExports.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_symbols.c_UnloadExports.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pExports = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [12 x i8] c"freeing %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UnloadExports() #0 {
  %1 = call i32 (...) @ENTER_FUNC()
  %2 = load i32*, i32** @pExports, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %10

4:                                                ; preds = %0
  %5 = load i32*, i32** @pExports, align 8
  %6 = ptrtoint i32* %5 to i32
  %7 = call i32 @DPRINT(i32 %6)
  %8 = load i32*, i32** @pExports, align 8
  %9 = call i32 @PICE_free(i32* %8)
  store i32* null, i32** @pExports, align 8
  br label %10

10:                                               ; preds = %4, %0
  %11 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i32 @PICE_free(i32*) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
